--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
 
                 <li class="participant-item">
                     <div class="profile-pic_container">
-                        <img src="resources/owner-picture.png" alt="Owner's Profile Picture">
+                        <img src="resources/owner-picture.png" alt="Participant's Profile Picture">
                     </div>
-                    <div class="participant-name-role">
-                    <h6 class="participant-name">Lionel Andres Messi</h6>
-                        <p class="participant-role">Scrum Master</p>
+                    
+                    <div class="participant-name-votes">
+                        <div class="participant-name-role">
+                            <h6 class="participant-name">Lionel Andres Messi</h6>
+                            <p class="participant-role">Scrum Master</p>
+                        </div>
+                        <div class="participant-votes">
+                            99
+                        </div>
                     </div>
                 </li>
 
