fixed no wrapping cards content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="cards-container">
-                <div class="cards"></div>
+                <div class="cards active-card"></div>
                 <div class="cards"></div>
                 <div class="cards"></div>
                 <div class="cards"></div>
